k8s/jlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jlab-frontend
  namespace: osg-frontends
spec:
  selector:
    matchLabels:
      k8s-app: jlab-frontend
  template:
    metadata:
      labels:
        k8s-app: jlab-frontend
    spec:
      containers:
      - env:
        - name: VO_POOL
          value: "osg-jlab-1.t2.ucsd.edu" 
        name: jlab-frontend
        image: aaarora/gwms-fe-docker:latest
        ports:
        - containerPort: 80 
        volumeMounts:
        - mountPath: /var/lib/gwms-frontend/web-area
          name: jlab-storage
        - mountPath: /etc/grid-security/gwms-frontend
          name: proxycerts-secret
          readOnly: true
        - mountPath: /etc/grid-security/voms
          name: vomscerts-secret
          readOnly: true
        - mountPath: /etc/gwms-frontend/proxies.ini
          subPath: proxies.ini
          name: proxies-config
        - mountPath: /etc/gwms-frontend/frontend.xml.k8s
          subPath: frontend.xml.k8s
          name: fexml-config
        resources:
          limits:
            cpu: 4
            memory: 3Gi
          requests:
            cpu: 3
            memory: 1Gi
      restartPolicy: Always
      volumes:
        - name: jlab-storage
          persistentVolumeClaim:
            claimName: jlab-storage
        - name: proxycerts-secret
          secret:
            secretName: proxycerts
            defaultMode: 0600      #Right File Permissions so can only be read by one node.
        - name:  vomscerts-secret
          secret:
            secretName: vomscerts
            defaultMode: 0600
        - name: proxies-config
          configMap:
             name: proxies
        - name: fexml-config
          configMap:
             name: fexml
